[gd_scene load_steps=4 format=2]

[ext_resource path="res://common_assets/Fonts/signup.tres" type="DynamicFont" id=1]
[ext_resource path="res://common_assets/Fonts/newsignup.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/Signup/SignupScript.gd" type="Script" id=3]

[node name="Signup" type="Node2D"]
script = ExtResource( 3 )

[node name="newsignup" type="Label" parent="."]
margin_right = 1024.0
margin_bottom = 576.0
custom_fonts/font = ExtResource( 2 )
text = "New Signup"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 576.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
margin_left = 360.0
margin_top = 182.0
margin_right = 664.0
margin_bottom = 394.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
margin_right = 150.0
margin_bottom = 212.0

[node name="id" type="Label" parent="CenterContainer/HBoxContainer/VBoxContainer"]
margin_right = 150.0
margin_bottom = 50.0
rect_min_size = Vector2( 150, 50 )
custom_fonts/font = ExtResource( 1 )
text = "Login ID:"
align = 2
valign = 1

[node name="pw" type="Label" parent="CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 150.0
margin_bottom = 104.0
rect_min_size = Vector2( 150, 50 )
custom_fonts/font = ExtResource( 1 )
text = "Password:"
align = 2
valign = 1

[node name="pw2" type="Label" parent="CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 150.0
margin_bottom = 158.0
rect_min_size = Vector2( 150, 50 )
custom_fonts/font = ExtResource( 1 )
text = "Confirm Password:"
align = 2
valign = 1

[node name="email" type="Label" parent="CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 162.0
margin_right = 150.0
margin_bottom = 212.0
rect_min_size = Vector2( 150, 50 )
custom_fonts/font = ExtResource( 1 )
text = "Email:"
align = 2
valign = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
margin_left = 154.0
margin_right = 304.0
margin_bottom = 212.0

[node name="idinput" type="LineEdit" parent="CenterContainer/HBoxContainer/VBoxContainer2"]
margin_right = 150.0
margin_bottom = 50.0
rect_min_size = Vector2( 150, 50 )
custom_fonts/font = ExtResource( 1 )
max_length = 50

[node name="pwinput" type="LineEdit" parent="CenterContainer/HBoxContainer/VBoxContainer2"]
margin_top = 54.0
margin_right = 150.0
margin_bottom = 104.0
rect_min_size = Vector2( 150, 50 )
custom_fonts/font = ExtResource( 1 )
max_length = 50

[node name="confirmPassword" type="LineEdit" parent="CenterContainer/HBoxContainer/VBoxContainer2"]
margin_top = 108.0
margin_right = 150.0
margin_bottom = 158.0
rect_min_size = Vector2( 150, 50 )
custom_fonts/font = ExtResource( 1 )
max_length = 50

[node name="emailinput" type="LineEdit" parent="CenterContainer/HBoxContainer/VBoxContainer2"]
margin_top = 162.0
margin_right = 150.0
margin_bottom = 212.0
rect_min_size = Vector2( 150, 50 )
custom_fonts/font = ExtResource( 1 )
max_length = 50

[node name="SignupButton" type="Button" parent="."]
margin_left = 821.531
margin_top = 478.236
margin_right = 979.531
margin_bottom = 533.236
custom_fonts/font = ExtResource( 1 )
text = "Confirm Signup"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pwError" type="AcceptDialog" parent="."]
visible = true
margin_left = 4.20193
margin_top = 16.7
margin_right = 267.202
margin_bottom = 105.7
dialog_text = "Passwords don't match!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="signupSuccess" type="AcceptDialog" parent="."]
visible = true
margin_left = 4.20193
margin_top = 16.7
margin_right = 267.202
margin_bottom = 105.7
dialog_text = "Signup successful!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_changed" from="CenterContainer/HBoxContainer/VBoxContainer2/idinput" to="." method="_on_idinput_text_changed"]
[connection signal="text_changed" from="CenterContainer/HBoxContainer/VBoxContainer2/pwinput" to="." method="_on_pwinput_text_changed"]
[connection signal="text_changed" from="CenterContainer/HBoxContainer/VBoxContainer2/confirmPassword" to="." method="_on_confirmPassword_text_changed"]
[connection signal="text_changed" from="CenterContainer/HBoxContainer/VBoxContainer2/emailinput" to="." method="_on_emailinput_text_changed"]
[connection signal="pressed" from="SignupButton" to="." method="_on_SignupButton_pressed"]
[connection signal="confirmed" from="signupSuccess" to="." method="_on_signupSuccess_confirmed"]
